--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-phone-input": "^0.2.2",
     "react-navigation": "^3.11.0"
