--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-phone-input": "^0.2.2",
+    "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
