--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.5.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.8",
