--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.0",
+    "@react-native-community/viewpager": "^1.1.7",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.8",
