--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-phone-input": "^0.2.2",
+    "react-native-render-html": "^4.1.2",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0"
   },
